--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -2,13 +2,14 @@
   <div class="section__content section__content--p30">
     <div class="container-fluid">
       <div class="header-wrap ">
+        <!--
         <form class="form-header" action="" method="POST">
           <input class="au-input au-input--xl " type="text" name="busca"
             placeholder="Pesquisa" />
           <button class="au-btn--submit " type="button">
             <i class="zmdi zmdi-search"></i>
           </button>
-        </form>
+        </form>-->
         <div class="col-md-2 mt-1" id="balcaoVendas">
 
 
