--- a/navbar-mobile.html
+++ b/navbar-mobile.html
@@ -2,7 +2,9 @@
     <div class="header-mobile__bar bg-black">
         <div class="">
             <div class="header-mobile-inner">
-                <a class="logo pl-5" href="index.html">
+               
+         
+                <a class="logo pl-5" href="index.html" hidden>
                     <img src="./images/kd_sistema_blue.png" alt="KD Gerenciador" style="width: 200px; height: auto;" />
                 </a>
                 <button class="hamburger hamburger--slider mr-4" type="button">
