--- a/vendas.html
+++ b/vendas.html
@@ -66,7 +66,7 @@
                 <!-- DATA TABLE -->
                 <div class="login-logo1 card-header1 bg-info text-center " style="border: 1px solid grey;">
 
-                  <h2 class="text-center text-white ">Balcão de Vendas</h2>
+                  <h2 class="text-center text-white ">Balcão de Vendas</h2><span id="Data"></span>
 
                 </div>
                 <form method="post" id="Form_vendas">
