--- a/estoque.html
+++ b/estoque.html
@@ -287,10 +287,15 @@
                 <form action="" method="" id="formProduto">
                   <div class="bg-burguer-center mt-1 inputs ">
                     <div class="row  ml-1 mr-1 pt-1 ">
-                      <div class="form-group col-md-10">
+                      <div class="form-group col-md-8">
                         <label for="descricao">Descrição</label>
                         <input id="Descricao" class="form-control" type="text" name="descricao" required>
                       </div>
+                      <div class="form-group col-md-2">
+                        <label for="codProduto">Código</label>
+                        <input id="codProduto" class="form-control" type="text" name="codProduto">
+                      </div>
+
                       <div class="form-group col-md-2">
                         <label for="idProduto">ID</label>
                         <input id="idProduto" class="form-control" type="text" name="idProduto" disabled>
