--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,9 @@
         <li>
           <a href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
         </li>
+        <li>
+          <a href="cadastros.html"> <i class="fas fa-user"></i>Cadastros</a>
+        </li>
         <!--
         <li>
           <a href="clientes.html"> <i class="fas fa-user"></i>Clientes
