--- a/vendas.html
+++ b/vendas.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Required meta tags-->
   <meta charset="UTF-8" />
+  <meta http-equiv="cache-control" content="no-cache" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="au theme template" />
   <meta name="author" content="Kelvin/Diogo" />
@@ -66,7 +67,7 @@
                 <!-- DATA TABLE -->
                 <div class="login-logo1 card-header1 bg-info text-center " style="border: 1px solid grey;">
 
-                  <h2 class="text-center text-white ">Balcão de Vendas</h2><span id="Data"></span>
+                  <h2 class="text-center text-white ">Balcão de Vendas</h2><span id="Data" class="text-white"></span>
 
                 </div>
                 <form method="post" id="Form_vendas">
