--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Required meta tags-->
   <meta charset="UTF-8" />
+  <meta http-equiv="cache-control" content="no-cache" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="au theme template" />
   <meta name="author" content="KD devs" />
@@ -65,7 +66,7 @@
               </div>
             </div>
             <div class="row m-t-25">
-              <!---->
+              <!--
               <div class="col-sm-6 col-lg-3">
                 <div class="overview-item overview-item--c1">
                   <div class="overview__inner">
@@ -84,6 +85,7 @@
                   </div>
                 </div>
               </div>
+              -->
               <div class="col-sm-6 col-lg-3">
                 <div class="overview-item overview-item--c2">
                   <div class="overview__inner">
@@ -102,6 +104,7 @@
                   </div>
                 </div>
               </div>
+              <!--
               <div class="col-sm-6 col-lg-3">
                 <div class="overview-item overview-item--c3">
                   <div class="overview__inner">
@@ -119,7 +122,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div>-->
               <div class="col-sm-6 col-lg-3">
                 <div class="overview-item overview-item--c4">
                   <div class="overview__inner">
@@ -134,6 +137,24 @@
                     </div>
                     <div class="overview-chart">
                       <canvas id="widgetChart4"></canvas>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-lg-3">
+                <div class="overview-item overview-item--c5">
+                  <div class="overview__inner">
+                    <div class="overview-box clearfix">
+                      <div class="icon">
+                        <i class="zmdi zmdi-truck"></i>
+                      </div>
+                      <div class="text">
+                        <h2 id="painel_estoque_listar"></h2>
+                        <span class="font-weight-bold">Estoque</span>
+                      </div>
+                    </div>
+                    <div class="overview-chart">
+                      <canvas id="widgetChart7"></canvas>
                     </div>
                   </div>
                 </div>
@@ -179,24 +200,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-lg-3">
-                <div class="overview-item overview-item--c7">
-                  <div class="overview__inner">
-                    <div class="overview-box clearfix">
-                      <div class="icon">
-                        <i class="zmdi zmdi-truck"></i>
-                      </div>
-                      <div class="text">
-                        <h2 id="painel_estoque_listar"></h2>
-                        <span class="font-weight-bold">Estoque</span>
-                      </div>
-                    </div>
-                    <div class="overview-chart">
-                      <canvas id="widgetChart7"></canvas>
-                    </div>
-                  </div>
-                </div>
-              </div>
+         
               <div class="col-sm-6 col-lg-3">
                 <div class="overview-item overview-item--c8">
                   <div class="overview__inner">
