--- a/cadastros.html
+++ b/cadastros.html
@@ -132,7 +132,7 @@
                                     <th scope="col"> </th>
                            
                                 </thead>
-                                <tbody class="text-center text-dark  TabelaCaixa" id="TabelaCaixa">
+                                <tbody class="text-center text-dark  tabelaCaixa" id="tabelaCaixa">
 
                                 </tbody>
                               </table>
