--- a/cadastros.html
+++ b/cadastros.html
@@ -106,7 +106,7 @@
                                 </select>
                               </div>
                             </div>
-                            <div class="form-group row justify-content-center text-center mt-3">
+                            <div class="form-group row justify-content-center text-center mt-3" id="botoes">
                               <button type="button" class="btn btn-danger  col-5  col-md-2" id="limpar_form">
                                 <i class="fas fa-times"></i>
                                 Limpar
