--- a/menu.html
+++ b/menu.html
@@ -8,21 +8,21 @@
   <div class="menu-sidebar__content js-scrollbar1 text-white">
     <nav class="navbar-sidebar">
       <ul class="list-unstyled navbar__list">
-        <li class="has-sub">
+        <li class="has-sub" id="painel">
           <a href="index.html">
             <i class="fas fa-tachometer-alt text-white"></i>Painel de Controle</a>
         </li>
-        <li n>
+        <li id="vendas">
           <a href="vendas.html"><i class="fas fa-money-bill-alt"></i>Vendas
           </a>
         </li>
-        <li>
+        <li id="estoque">
           <a href="estoque.html"> <i class="fas fa-box"></i>Estoque</a>
         </li>
-        <li>
+        <li id="tabelas">
           <a href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
         </li>
-        <li>
+        <li id="cadastros">
           <a href="cadastros.html"> <i class="fas fa-user"></i>Cadastros</a>
         </li>
         <!--
@@ -49,6 +49,7 @@
       </ul>
     </nav>
   </div>
+
   <script>
     // Sublist Sidebar
     try {
@@ -66,6 +67,26 @@
     } catch (error) {
       console.log(error);
     }
+
+
+    let user = JSON.parse(sessionStorage.user);
+
+    function permissoes() {
+      if (user.tipo === 1) {
+        $("#logo").show();
+        $("#tabelas").show();
+        $("#cadastros").show();
+        $("#estoque").show();
+      } else {
+        $("#logo").hide();
+        $("#tabelas").hide();
+        $("#cadastros").hide();
+        $("#estoque").hide();
+      }
+
+    }
+
+    window.onload = permissoes();
   </script>
 </aside>
 <!-- END MENU SIDEBAR-->
