--- a/menu.html
+++ b/menu.html
@@ -69,7 +69,7 @@
     }
 
 
-    let user = JSON.parse(sessionStorage.user);
+   // let user = JSON.parse(sessionStorage.user);
 
     function permissoes() {
       if (user.tipo === 1) {
