--- a/register.html
+++ b/register.html
@@ -63,71 +63,26 @@
                                     <input class="au-input au-input--full border-input" type="email" name="email"
                                         placeholder="exemplo@email.com" required id="email">
                                 </div>
+                                <div class=" form-group">
+                                    <label>Senha</label>
+                                    <input class="au-input au-input--full border-input" type="password" name="password"
+                                        autocomplete="new-password" placeholder="Senha" required id="password">
+                                </div>
+                                <!--
                                 <div class="form-group">
                                     <label>Email de Recuperação</label>
                                     <input class="au-input au-input--full border-input" type="email"
                                         name="email_recuperacao" id="email_recuperacao"
-                                        placeholder="exemplo@outroemail.com" required>
-                                </div>
-                                <div class="row">
-                                    <div class=" col-md-6 form-group">
-                                        <label>Senha</label>
-                                        <input class="au-input au-input--full border-input" type="password"
-                                            name="password" autocomplete="new-password" placeholder="Senha" required
-                                            id="password">
-                                        <div class="pt-2  form-group">
-                                            <label>Confirme a Senha</label>
-                                            <input class="au-input au-input--full border-input" type="password"
-                                                name="password" autocomplete="new-password"
-                                                placeholder="Confirme a Senha" required>
-                                        </div>
-
-                                        <div class="form-group">
-                                            <label for="">Imagem</label>
-                                            <label class=" btn btn-info" for='foto'>
-                                                Selecionar um arquivo &#187;
-                                            </label>
-                                            <input class="" name="foto" id="foto" type="file"
-                                                onchange="encodeImgtoBase64(this)" />
-                                        </div>
-                                    </div>
-
-                                    <div class=" col-md-6 img">
-                                        <label for="">Preview</label>
-                                        <figure >
-                                            <label for="" disabled>
-                                            <img class="img-thumbnail border-input " id="image"
-                                                src="./images/user.png" alt="Picture" disabled>
-                                            </label>
-                                        </figure>
-
-                                    </div>
-
-                                </div>
-                                <!--
-                                <div class="login-checkbox">
-                                    <label>
-                                        <input type="checkbox" name="aggree">Aceita os termos de uso?
-                                    </label>
-                                </div>
-                                -->
-                                <div class="gif col-md-12 text-center" id="gif"></div>
-                                <button class="au-btn au-btn--block bg-success btn m-b-20" type="button" id="submit">
-                                    <p class="text-white font-weight-bold">Cadastrar</p>
-                                </button>
-
-                                <!--
-                                <div class="social-login-content">
-                                    <div class="social-button">
-                                        <button class="au-btn au-btn--block au-btn--blue m-b-20">Cadastro com
-                                            facebook</button>
-
-                                    </div>
-                                </div>
-                                -->
+                                        placeholder="exemplo@outroemail.com" required>-->
                             </form>
+
+                            <div class="gif col-md-12 text-center pt-3" id="gif"></div>
+                            <button class="au-btn au-btn--block bg-success btn m-b-20 " type="button" id="submit">
+                                <p class="text-white font-weight-bold">Cadastrar</p>
+                            </button>
+
                             <h4 id="error"></h4>
-                          
+
                             <div class="register-link pb-3">
                                 <h5>
                                     Já tem Conta ?
@@ -139,6 +94,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
     </div>
 
